[package]
name = "pcap2socks-gui"
version = "0.2.0"
authors = [ "Xie Zhihao <xzh1206@gmail.com>" ]
edition = "2018"
description = "A front-end interface for pcap2socks."
repository = "https://github.com/zhxie/pcap2socks-gui"
license = "MIT"
keywords = [ "proxy", "pcap", "socks" ]
categories = [ "network-programming" ]
default-run = "pcap2socks-gui"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.8" }

[dependencies]
dns-lookup = "1.0.8"
dnsping = "0.2.0"
ipnetwork = "0.19.0"
ninat = "0.1.0"
pcap2socks = { git = "https://github.com/askldfhjg/pcap2socks" }
rand = "0.8.5"
serde_json = "1.0.81"
serde = { version = "1.0.137", features = [ "derive" ] }
tauri = { version = "1.0.0-rc.8", features = [] }
tokio = { version = "1.18.2", default-features = false, features = [ "time", "macros" ] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
